pods.yaml
apiVersion: v1
kind: Pod
metadata:
  name: web-server
  namespace: homework
  labels:
    name: web-server
spec:
  containers:
  - name: nginx
    image: nginx:alpine
    volumeMounts:
    - name: shared-volume
      mountPath: /homework
    - name: nginx-conf
      mountPath: /etc/nginx/conf.d/default.conf
      subPath: nginx.conf
    resources:
      limits:
        memory: "512Mi"
        cpu: "500m"
    ports:
      - containerPort: 8000
    lifecycle:
      preStop:
        exec:
          command: ["sh", "-c", "rm -f /homework/index.html"]
  volumes:
  - name: nginx-conf
    configMap:
      name: nginx-conf
  - name: shared-volume
    emptyDir:
      sizeLimit: 50Mi




# START:
#   minikube start --force
#   kubectl apply -f namespaces.yaml
#   kubectl apply -f configmaps.yaml
#   kubectl apply -f pods.yaml
#   kubectl apply -f services.yaml

# NAMESPACES:
#   kubectl get namespaces
#   kubectl config set-context --current --namespace=homework

# GET INFO:
#   kubectl get po -A
#   kubectl get svc

# GIT:
#   git checkout -- .
#   git pull

# DEBUG:
#   kubectl describe pod web-server -n homework
#   kubectl logs web-server -c init-busybox -n homework

# CLEAN:
#   kubectl delete configmaps nginx-conf -n homework
#   kubectl delete ingress web-server-ingress -n homework
#   kubectl delete pod web-server -n homework
#   kubectl delete services web-server-service -n homework
#   kubectl delete namespaces homework
