services.yaml
apiVersion: v1
kind: Service
metadata:
  name: web-server-service
  namespace: homework
spec:
  selector:
    name: web-server
  ports:
    - protocol: TCP
      port: 8080
      targetPort: 8000
  type: NodePort
