web-server-service.yml
apiVersion: v1
kind: Service
metadata:
  name: web-server-service
  namespace: homework
spec:
  selector:
    name: web-server
  ports:
    - protocol: TCP
      port: 80
      targetPort: 8000
